# PPHC

./: CMakeLists.txt  README.md
backend/: server.cpp
benchmarks/: CMakeLists.txt  ntt_benchmark.cpp
core/include/math/: ntt_core.h
core/src/math/: ntt_core.cpp
docker/: Dockerfile  docker-compose.yml
hardware/fpga/: ntt_accelerator.v  twiddle_rom.v
models/: train_model.py
